[tool.poetry]
name = "amqpeek"
version = "0.0.7"
description = "A flexible RMQ monitor that keeps track of RMQ, notifying you over multiple channels when connections cannot be made, queues have not been declared, and when queue lengths increase beyond specified limits."
authors = ["steveYeah <hutchinsteve@gmail.com>"]
include = ["config/*.yaml"]
license = "MIT"

[tool.poetry.scripts]
amqpeek = "amqpeek.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
PyYAML = "^5.3.1"
pika = "^1.1.0"
slacker = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
