[tool.poetry]
name = "amqpeek"
version = "0.0.7"
description = "A flexible RMQ monitor that keeps track of RMQ, notifying you over multiple channels when connections cannot be made, queues have not been declared, and when queue lengths increase beyond specified limits."
authors = ["steveYeah <hutchinsteve@gmail.com>"]
license = "MIT"
readme="README.md"
homepage="https://github.com/steveYeah/amqpeek"
repository="https://github.com/steveYeah/amqpeek"


[tool.poetry.scripts]
amqpeek = "amqpeek.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
PyYAML = "^5.3.1"
pika = "^1.1.0"
slacker = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
pdbpp = "^0.10.2"
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
darglint = "^1.5.4"
safety = "^1.9.0"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
codecov = "^2.1.9"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.5.0"
flake8-annotations = "^2.4.1"
mypy = "^0.782"
typeguard = "^2.9.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["amqpeek"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
